--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -4,14 +4,12 @@
     =flash[:login_error]
 
 -form_tag session_path, :id => 'new_session' do
-  .wrapper
-    .text_fields
-      =text_field_tag :username
-      =password_field_tag :password
-      =submit_tag "login", :id => "login_button"
-    .options
-      %label.remember_label(for="remember_me")
-        =check_box_tag :remember_me
-        remember me
+  .fields
+    =text_field_tag :username
+    =password_field_tag :password
+    %label.remember_label(for="remember_me")
+      =check_box_tag :remember_me
+      remember me
+    =submit_tag "login", :id => "login_button"
   .links
     =link_to 'sign up', new_user_path, :class => "signup"
