Removed tiptip code in list index.  'instant sign up' rather than 'sign up' on login page.

--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -12,4 +12,4 @@
       remember me
     =submit_tag "login", :id => "login_button"
 
-  =link_to 'sign up', new_user_path, :class => "signup"
+  =link_to 'instant sign up', new_user_path, :class => "signup"
