--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -68,85 +68,77 @@ body {
   font-family: 'Lucida Grande', 'Lucida Sans Unicode', Arial, Verdana, sans-serif;
   color: #777;
 }
-/* line 20, ../../../app/stylesheets/screen.scss */
+/* line 19, ../../../app/stylesheets/screen.scss */
 body #container {
   margin-left: auto;
   margin-right: auto;
   width: 500px;
 }
-/* line 24, ../../../app/stylesheets/screen.scss */
+/* line 23, ../../../app/stylesheets/screen.scss */
 body #container #header {
   overflow: hidden;
   display: inline-block;
-  -moz-border-radius-bottomleft: 8px;
-  -webkit-border-bottom-left-radius: 8px;
-  -o-border-bottom-left-radius: 8px;
-  -ms-border-bottom-left-radius: 8px;
-  -khtml-border-bottom-left-radius: 8px;
-  border-bottom-left-radius: 8px;
-  -moz-border-radius-bottomright: 8px;
-  -webkit-border-bottom-right-radius: 8px;
-  -o-border-bottom-right-radius: 8px;
-  -ms-border-bottom-right-radius: 8px;
-  -khtml-border-bottom-right-radius: 8px;
-  border-bottom-right-radius: 8px;
   padding: 16px 0 16px 0;
-  margin-bottom: 1px;
 }
 /* line 8, ../../../vendor/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/utilities/general/_hacks.scss */
 body #container #header {
   display: block;
 }
-/* line 29, ../../../app/stylesheets/screen.scss */
-body #container #header #my_lists {
+/* line 26, ../../../app/stylesheets/screen.scss */
+body #container #header a#my_lists {
   display: inline;
   float: left;
   font-weight: bold;
   font-size: 1.2em;
 }
-/* line 34, ../../../app/stylesheets/screen.scss */
+/* line 31, ../../../app/stylesheets/screen.scss */
 body #container #header #account {
   display: inline;
   float: right;
-  display: inline;
 }
-/* line 38, ../../../app/stylesheets/screen.scss */
+/* line 33, ../../../app/stylesheets/screen.scss */
 body #container #header #account .separator {
   color: #CC6600;
   font-weight: bold;
 }
-/* line 43, ../../../app/stylesheets/screen.scss */
+/* line 35, ../../../app/stylesheets/screen.scss */
 body #container #header a {
   text-decoration: none;
 }
+/* line 37, ../../../app/stylesheets/screen.scss */
+body #container #footer {
+  color: #ccc;
+  padding: 32px;
+  text-align: center;
+}
 
-/* line 49, ../../../app/stylesheets/screen.scss */
+/* line 46, ../../../app/stylesheets/screen.scss */
 a:link {
   color: #888;
 }
-/* line 53, ../../../app/stylesheets/screen.scss */
+/* line 47, ../../../app/stylesheets/screen.scss */
 a:visited {
   color: #888;
 }
-/* line 54, ../../../app/stylesheets/screen.scss */
+/* line 48, ../../../app/stylesheets/screen.scss */
 a:hover {
   color: #aaa;
 }
 
-/* line 58, ../../../app/stylesheets/screen.scss */
+/* line 52, ../../../app/stylesheets/screen.scss */
 .formtastic li {
   margin: 8px 0 8px 0;
 }
-/* line 59, ../../../app/stylesheets/screen.scss */
+/* line 53, ../../../app/stylesheets/screen.scss */
 .formtastic label {
   display: block;
   margin-bottom: 8px;
 }
-/* line 63, ../../../app/stylesheets/screen.scss */
+/* line 57, ../../../app/stylesheets/screen.scss */
 .formtastic abbr {
   color: #993333;
 }
-/* line 64, ../../../app/stylesheets/screen.scss */
+/* line 58, ../../../app/stylesheets/screen.scss */
 .formtastic .inline-errors {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
@@ -163,12 +155,11 @@ a:hover {
   font-size: 0.8em;
 }
 
-/* line 75, ../../../app/stylesheets/screen.scss */
+/* line 69, ../../../app/stylesheets/screen.scss */
 input[type="text"], input[type="password"] {
-  border-top: solid 3px #ccc;
-  border-left: solid 3px #ccc;
-  border-bottom: solid 3px #fff;
-  border-right: solid 3px #fff;
+  border-width: 3px;
+  border-color: #ccc #fff #fff #ccc;
+  border-style: solid;
   background-color: #fff;
   color: #555;
   padding: 5px;
@@ -181,7 +172,7 @@ input[type="text"], input[type="password"] {
   border-radius: 5px;
 }
 
-/* line 88, ../../../app/stylesheets/screen.scss */
+/* line 81, ../../../app/stylesheets/screen.scss */
 input[type="button"], input[type="submit"] {
   border: none;
   -moz-border-radius: 3px;
@@ -194,35 +185,12 @@ input[type="button"], input[type="submit"] {
   padding: 7px 8px 7px 8px;
   color: #fff;
 }
-/* line 95, ../../../app/stylesheets/screen.scss */
+/* line 87, ../../../app/stylesheets/screen.scss */
 input[type="button"]:hover, input[type="submit"]:hover {
   background-color: #ccc;
 }
 
-/* line 99, ../../../app/stylesheets/screen.scss */
-input[type="zcheckboxz"] {
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -o-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -khtml-border-radius: 2px;
-  border-radius: 2px;
-  background-color: #888;
-  vertical-align: middle;
-  width: 15px;
-  height: 15px;
-  margin: 0px;
-}
-/* line 108, ../../../app/stylesheets/screen.scss */
-input[type="zcheckboxz"]:hover {
-  background-color: #ddd;
-}
-/* line 109, ../../../app/stylesheets/screen.scss */
-input[type="zcheckboxz"]:checked {
-  background-color: #FFFFCC;
-}
-
-/* line 115, ../../../app/stylesheets/screen.scss */
+/* line 90, ../../../app/stylesheets/screen.scss */
 #login_error {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
@@ -238,46 +206,50 @@ input[type="zcheckboxz"]:checked {
   color: #fff;
   background-color: #CC3333;
   font-weight: bold;
-  display: inline;
 }
 /* line 8, ../../../vendor/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/utilities/general/_hacks.scss */
 #login_error {
   display: block;
 }
 
-/* line 127, ../../../app/stylesheets/screen.scss */
+/* line 101, ../../../app/stylesheets/screen.scss */
 form#new_session {
   width: 300px;
   margin: 0 auto 0 auto;
 }
-/* line 130, ../../../app/stylesheets/screen.scss */
+/* line 104, ../../../app/stylesheets/screen.scss */
 form#new_session .fields {
+  display: inline;
   float: left;
 }
-/* line 132, ../../../app/stylesheets/screen.scss */
+/* line 106, ../../../app/stylesheets/screen.scss */
 form#new_session .fields input[type="text"], form#new_session .fields input[type="password"] {
   display: block;
   margin-bottom: 8px;
   width: 283px;
+  display: inline;
   float: left;
 }
-/* line 138, ../../../app/stylesheets/screen.scss */
+/* line 112, ../../../app/stylesheets/screen.scss */
 form#new_session .fields label {
+  display: inline;
   float: left;
   margin-top: 11px;
 }
-/* line 142, ../../../app/stylesheets/screen.scss */
+/* line 116, ../../../app/stylesheets/screen.scss */
 form#new_session .fields input[type="submit"] {
+  display: inline;
   float: right;
   font-size: 1em;
   margin: 3px 0 8px 0;
 }
-/* line 148, ../../../app/stylesheets/screen.scss */
+/* line 122, ../../../app/stylesheets/screen.scss */
 form#new_session a {
+  display: inline;
   float: right;
 }
 
-/* line 151, ../../../app/stylesheets/screen.scss */
+/* line 125, ../../../app/stylesheets/screen.scss */
 .nav {
   overflow: hidden;
   display: inline-block;
@@ -288,9 +260,9 @@ form#new_session a {
 .nav {
   display: block;
 }
-/* line 156, ../../../app/stylesheets/screen.scss */
+/* line 129, ../../../app/stylesheets/screen.scss */
 .nav .new_list.button {
-  padding: 0.8em;
+  padding: 0.8em 1em 0.8em 1em;
   background-color: #888;
   color: #fff;
   text-transform: uppercase;
@@ -302,7 +274,7 @@ form#new_session a {
   -khtml-border-radius: 8px;
   border-radius: 8px;
 }
-/* line 163, ../../../app/stylesheets/screen.scss */
+/* line 136, ../../../app/stylesheets/screen.scss */
 .nav .new_list.button:hover {
   -moz-opacity: 0.8;
   -webkit-opacity: 0.8;
@@ -313,21 +285,11 @@ form#new_session a {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
 }
 
-/* line 168, ../../../app/stylesheets/screen.scss */
-#lists {
-  overflow: hidden;
-  display: inline-block;
-}
-/* line 8, ../../../vendor/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/utilities/general/_hacks.scss */
-#lists {
-  display: block;
-}
-/* line 170, ../../../app/stylesheets/screen.scss */
+/* line 142, ../../../app/stylesheets/screen.scss */
 #lists .list {
   overflow: hidden;
   display: inline-block;
   padding: 1em;
-  padding-bottom: 1.2em;
   margin-bottom: 1px;
   background-color: #ddd;
 }
@@ -335,104 +297,87 @@ form#new_session a {
 #lists .list {
   display: block;
 }
-/* line 176, ../../../app/stylesheets/screen.scss */
+/* line 147, ../../../app/stylesheets/screen.scss */
 #lists .list .handle {
+  display: inline;
   float: left;
   background-color: #888;
   color: #fff;
   font-size: 0.5em;
   padding: 0.5em;
-  cursor: move;
-  margin-right: 0.5em;
-  cursor: url(/images/grab.png), default;
+  cursor: url(/images/grab.png), move;
 }
-/* line 185, ../../../app/stylesheets/screen.scss */
+/* line 154, ../../../app/stylesheets/screen.scss */
 #lists .list .handle:active {
-  cursor: url(/images/grabbing.png), default;
+  cursor: url(/images/grabbing.png), move;
 }
-/* line 187, ../../../app/stylesheets/screen.scss */
+/* line 156, ../../../app/stylesheets/screen.scss */
 #lists .list .name {
+  display: inline;
   float: left;
-  margin-left: 13px;
+  margin-left: 16px;
   width: 388px;
 }
-/* line 191, ../../../app/stylesheets/screen.scss */
+/* line 160, ../../../app/stylesheets/screen.scss */
 #lists .list .name .items_count {
   display: inline;
   color: #888;
   font-size: 0.5em;
   font-weight: bold;
 }
-/* line 198, ../../../app/stylesheets/screen.scss */
+/* line 167, ../../../app/stylesheets/screen.scss */
 #lists .list .delete.button {
   text-decoration: none;
+  display: inline;
   float: right;
 }
 
-/* line 206, ../../../app/stylesheets/screen.scss */
+/* line 175, ../../../app/stylesheets/screen.scss */
 #list #info {
   text-align: center;
-  margin: 8px 0 16px 0;
+  margin: 3px 0 16px 0;
 }
-/* line 209, ../../../app/stylesheets/screen.scss */
+/* line 178, ../../../app/stylesheets/screen.scss */
 #list #info #name {
-  display: inline;
   font-size: 1.5em;
   font-weight: bold;
   text-decoration: none;
 }
-/* line 216, ../../../app/stylesheets/screen.scss */
+/* line 184, ../../../app/stylesheets/screen.scss */
 #list #info form input[type="text"] {
-  margin-left: auto;
-  margin-right: auto;
-  display: inline;
+  margin: 0 auto 0 auto;
   width: 300px;
 }
-/* line 222, ../../../app/stylesheets/screen.scss */
+/* line 188, ../../../app/stylesheets/screen.scss */
 #list #info form .loader {
   padding: 8px;
   position: absolute;
   visibility: hidden;
 }
-/* line 229, ../../../app/stylesheets/screen.scss */
+/* line 195, ../../../app/stylesheets/screen.scss */
 #list form#new_item {
   text-align: center;
-  margin-bottom: 32px;
-  margin-top: 32px;
+  margin: 32px 0 25px 0;
 }
-/* line 233, ../../../app/stylesheets/screen.scss */
-#list form#new_item .fields {
-  display: inline;
-}
-/* line 235, ../../../app/stylesheets/screen.scss */
+/* line 199, ../../../app/stylesheets/screen.scss */
 #list form#new_item .fields #item_body {
   width: 300px;
   margin-right: 11px;
 }
-/* line 236, ../../../app/stylesheets/screen.scss */
+/* line 200, ../../../app/stylesheets/screen.scss */
 #list form#new_item .fields input[type="submit"] {
   width: 80px;
 }
-/* line 238, ../../../app/stylesheets/screen.scss */
+/* line 202, ../../../app/stylesheets/screen.scss */
 #list form#new_item .loader {
   margin: 8px 0 8px 3px;
   position: absolute;
   visibility: hidden;
 }
-/* line 244, ../../../app/stylesheets/screen.scss */
-#list .items {
-  -moz-border-radius: 7px;
-  -webkit-border-radius: 7px;
-  -o-border-radius: 7px;
-  -ms-border-radius: 7px;
-  -khtml-border-radius: 7px;
-  border-radius: 7px;
-}
-/* line 246, ../../../app/stylesheets/screen.scss */
+/* line 209, ../../../app/stylesheets/screen.scss */
 #list .items .item {
   overflow: hidden;
   display: inline-block;
-  cursor: url(/images/grab.png), default;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   -o-border-radius: 5px;
@@ -443,22 +388,17 @@ form#new_session a {
   color: #333;
   margin-bottom: 3px;
   font-size: 0.8em;
-  overflow: hidden;
-  display: inline-block;
+  cursor: url(/images/grab.png), default;
 }
 /* line 8, ../../../vendor/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/utilities/general/_hacks.scss */
 #list .items .item {
   display: block;
 }
-/* line 8, ../../../vendor/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/utilities/general/_hacks.scss */
-#list .items .item {
-  display: block;
-}
-/* line 257, ../../../app/stylesheets/screen.scss */
+/* line 217, ../../../app/stylesheets/screen.scss */
 #list .items .item:active {
   cursor: url(/images/grabbing.png), default;
 }
-/* line 258, ../../../app/stylesheets/screen.scss */
+/* line 218, ../../../app/stylesheets/screen.scss */
 #list .items .item:hover {
   -moz-opacity: 0.7;
   -webkit-opacity: 0.7;
@@ -468,93 +408,74 @@ form#new_session a {
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
 }
-/* line 262, ../../../app/stylesheets/screen.scss */
+/* line 219, ../../../app/stylesheets/screen.scss */
 #list .items .item .checkbox_wrapper {
   display: inline;
   float: left;
   padding: 11px;
   cursor: default;
 }
-/* line 268, ../../../app/stylesheets/screen.scss */
-#list .items .item .item_complete {
-  float: left;
-}
-/* line 271, ../../../app/stylesheets/screen.scss */
+/* line 224, ../../../app/stylesheets/screen.scss */
 #list .items .item .body {
   padding: 10px 0 8px 0;
+  display: inline;
   float: left;
   width: 388px;
   line-height: 1.8em;
 }
-/* line 277, ../../../app/stylesheets/screen.scss */
+/* line 230, ../../../app/stylesheets/screen.scss */
 #list .items .item input.item_body {
+  display: inline;
   float: left;
   width: 393px;
   padding: 0px;
   margin: 12px 0 12px 0;
 }
-/* line 283, ../../../app/stylesheets/screen.scss */
+/* line 236, ../../../app/stylesheets/screen.scss */
 #list .items .item .loader {
+  display: inline;
+  float: left;
   margin: 12px 0px 12px 12px;
   visibility: hidden;
-  float: left;
 }
-/* line 289, ../../../app/stylesheets/screen.scss */
+/* line 242, ../../../app/stylesheets/screen.scss */
 #list .items .item .delete_wrapper .delete.button {
+  display: inline;
   float: right;
   padding: 12px;
   text-decoration: none;
   color: #aaa;
 }
-/* line 294, ../../../app/stylesheets/screen.scss */
+/* line 247, ../../../app/stylesheets/screen.scss */
 #list .items .item .delete_wrapper .delete.button:hover {
   color: #c60;
 }
-/* line 298, ../../../app/stylesheets/screen.scss */
+/* line 251, ../../../app/stylesheets/screen.scss */
 #list .items .item.complete {
   background-color: #eee;
   color: #aaa;
 }
-/* line 301, ../../../app/stylesheets/screen.scss */
+/* line 254, ../../../app/stylesheets/screen.scss */
 #list .items .item.complete .delete.button {
-  -moz-opacity: 0.5;
-  -webkit-opacity: 0.5;
-  -o-opacity: 0.5;
-  -khtml-opacity: 0.5;
-  opacity: 0.5;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+  -moz-opacity: 0.8;
+  -webkit-opacity: 0.8;
+  -o-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
 }
-/* line 303, ../../../app/stylesheets/screen.scss */
+/* line 254, ../../../app/stylesheets/screen.scss */
 #list .items .item.complete .delete.button:hover {
-  -moz-opacity: 0.3;
-  -webkit-opacity: 0.3;
-  -o-opacity: 0.3;
-  -khtml-opacity: 0.3;
-  opacity: 0.3;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=30);
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=30);
+  -moz-opacity: 0.8;
+  -webkit-opacity: 0.8;
+  -o-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
 }
-/* line 307, ../../../app/stylesheets/screen.scss */
-#list #completed_items {
-  margin-bottom: 32px;
-}
-/* line 309, ../../../app/stylesheets/screen.scss */
+/* line 258, ../../../app/stylesheets/screen.scss */
 #list #completed_items .item {
   cursor: default;
-}
-/* line 312, ../../../app/stylesheets/screen.scss */
-#list #hint {
-  display: none;
-  text-align: center;
-  padding: 16px;
-  margin-top: 32px;
-  color: #aaa;
-  background-color: #fff;
-  -moz-border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -o-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -khtml-border-radius: 8px;
-  border-radius: 8px;
 }
